--- a/mo.tex
+++ b/mo.tex
@@ -803,13 +803,12 @@ Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a
 \end{remark}
 
 \begin{remark}
-\todo{Make sure you got this right.}
 We are also in a position to understand the stable cooperations $MO_* MO$.  We may rewrite this as
 \begin{align*}
 MO_* MO & = \pi_* MO \sm MO = \pi_* MO \sm_{H\F_2} (H\F_2 \sm MO) \\
 & \Leftarrow \Tor^{\F_2}_{*, *}(MO_*, H\F_2{}_* MO) = MO_* \otimes_{\F_2} H\F_2{}_* MO.
 \end{align*}
-Hence, a point in $\Spec MO_* MO$ consists of a pair of points in $\Spec MO_*$ and $\Spec H\F_2{}_* MO$, which we have already identified individually as formal group laws with vanishing $2$--series and formal group laws with logarithms respectively.  This description can be amplified to capture all of the structure maps: a formal group law with vanishing $2$--series admits a logarithm, which indicates how the composition and conjugation maps of \Cref{FHGivesComodules} behave.
+Hence, a point in $\Spec MO_* MO$ consists of a pair of points in $\Spec MO_*$ and $\Spec H\F_2{}_* MO$, which we have already identified respectively as formal group laws with vanishing $2$--series, a property, and formal group laws with specified logarithms, data.  This description can be amplified to capture all of the structure maps: a formal group law with vanishing $2$--series admits a logarithm, which indicates how the composition and conjugation maps of \Cref{FHGivesComodules} behave.
 \end{remark}
 
 
