--- a/preface.tex
+++ b/preface.tex
@@ -6,40 +6,23 @@
 
 \subsection*{Acknowledgements}
 
-Matthew Ando, Michael Hopkins, Neil Strickland
 
-Constantin Teleman---encouraging me to speak understandably
+This book owes an incredible amount to an incredible number of people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my academic career.  It has been an unmistakeable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe a very large debt to each of Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care as well as for having originally worked out this story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that I have been, for a decade now, paying forward his good will and deeply friendly nature from those first couple of years at Urbana--Champaign.  Mike and Neil are not far behind: Mike has been my supervisor in one role or another for years running, and Neil shared with me a note of his that would eventually blossom into my thesis problem.
 
-Haynes Miller, Doug Ravenel, Steve Wilson---the $BP$ mafia
+Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my PhD adviser, Constantin Teleman.  To his well-masked frustration, I had already drunk too much of the homotopical Kool-Aid by the time I arrived at UC--Berkeley, but he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.  (It is up to the reader to determine whether I have actually succeeded at this, and of course any failure of mine in this respect can't be visited on him.)
 
-Jack Morava
+More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory.  Haynes Miller, Doug Ravenel, and Steve Wilson (the ``$BP$ Mafia'')\citeme{Life and work of Doug Ravenel} have all been invaluable resources: they answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role both in the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is a credit first to their intelligence that they are comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time, time, and time again in hopes that I would someday get it.
 
-Nat Stapleton (and Charles Rezk, for the $H_\infty$ part)
+The bulk of this book began as a set of lecture notes for a topics course that I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.  The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.  In particular, this was the first time I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.  The book also draws on feedback from participating in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.  Finally, this book was further refined by many, many, many conversations with other students at UC--Berkeley: my topology undergraduates Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, had to put up with listening to me for years on end.
 
-Martin Bendersky---brief consultation about unstable cooperations
+This book also draws on a lot of unpublished material.  The topology community gets some flak for this, especially among graduate students who aren't fully cognizant of the incredible amount of effort it is to bring things to publication.  Rather, I think it is to topologists' credit that this unpublished material is made available anyway, essentially without redaction.  In no order at all, reference materials of this sort that have influenced this book include: Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Charles Rezk's \textit{Supplementary Notes for Math 512} as well as his \textit{Notes on the Hopkins--Miller Theorem} and his \textit{Elliptic Cohomology and Elliptic Curves}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena} as well as his \textit{Formal Schemes for $K$--Theory Spaces}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures.  I would not have understood the material presented here without access to these resources.
 
-Hood Chatham---the spectral sequence package, the picture of $\moduli{fg}$
+In addition to their inquisitive presences in class, the students who took the Harvard topics course under me often contributed directly to the lecture notes.  These contributors are: Eva Belmont, Hood Chatham (especially his spectral sequence package, \texttt{sseqpages}), Dexter Chua (a Cambridge student who helped translate the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in what is now Lectures 2.2--6 and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence and his help).
 
-Hisham Sati---the \textit{Flavors of Cohomology} workshop
+More broadly, the following people contributed to the course just by attending, where I have italicized those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textit{Eva Belmont}, Jason Bland, Dorin Boger, \textit{Lukas Brantner}, \textit{Christian Carrick}, \textit{Hood Chatham}, David Corwin, \textit{Jun Hou Fung}, \textit{Meng Guo}, \textit{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textit{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textit{Jake McNamara}, \textit{Akhil Mathews}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textit{Krishanu Sankar}, \textit{Jay Shah}, Ananth Shankar, \textit{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textit{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm kept me going when my own had been all but exhausted, and through the editing process it has been remarkable to see how completely reliably they asked exactly the right question at the right time.  Of the italicized names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he tolerated my butchery of his native field without once making me feel self-conscious.
 
-The Informal Groups seminar: Sean Tilson, Matt Pancia, Dave Carchedi, Achim Krause
+Additionally, various others have contributed in this way or that during the long production of this book, from typos to long conversations.  Such helpful people include: Tobias Barthel, Jon Beardsley, Martin Bendersky, Ben Gadoua, Pedro Mendes de Araujo, Denis Nardin, Sune Precht Reeh, Andrew Senger, Sean Tilson, and Kevin Wray.
 
-Hood Chatham and Geoffrey Lee, Catherine Ray, Kevin Wray---Berkeley students who I talked to a lot
+Lastly, but by far most importantly, this book would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced work life instead of being quickly and totally overwhelmed, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be the open and vibrant person I am today.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her and to dedicate this book to her.
 
-Various unpublished sources: COCTALOS, the Crystals notes, Charles's 512 notes, Charles's \textit{Notes on the Hopkins--Miller theorem}, Jacob's lecture notes, Haynes's notes on cobordism, Neil's \textit{Functorial Philosophy}, the AHS Theorem of the Cube preprint, Neil's \textit{Formal Schemes for $K$--theory spaces}, the AHS \textit{Elliptic cohomology of $BO\<8\>$ in positive characteristic} (thank you, Gerd!!), \ldots
-
-
-
-
-
-Contributors: Eva Belmont, Hood Chatham (spectral sequence package), Jun Hou Fung, Jeremy Hahn (Yuli Rudyak's alternative proof, lots of discussion about $\Div_n^+$, the AHR appendix, Tate construction), Mauro Porta, Krishanu Sankar, Danny Shi, Allen Yuan (the transfer, AHR appendix), Arun Debray, Dexter Chua (the $\moduli{fg}$ picture)
-
-Regular participants (whoever I could think of on March 24, again missing people): Eva Belmont, Lukas Brantner, Christian Carrick, Hood Chatham, Jun Hou Fung, Meng Guo, Jeremy Hahn, Erick Knight, Jake McNamara, Akhil Mathew, Krishanu Sankar, Jay Shah, Danny Shi, Allen Yuan
-
-Course registrants (collected March 24, possibly missing some MIT people): Colin Aitken, Adam Al-Natsheh, Eva Belmont, Jason Bland, Dorin Boger, Lukas Brantner, Christian Carrick, Hood Chatham, David Corwin, Jun Hou Fung, Meng Guo, Jeremy Hahn, Changho Han, Chi-Yun Hsu, Erick Knight, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, Jake McNamara, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, Kishanu Sankar, Jay Shah, Ananth Shankar, Danny Shi, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, Allen Yuan, Adrian Zahariuc, Yifei Zhao, Rong Zhou, Yihang Zhu.
-
-People who contributed to the GitHub repository (to be collected later, make sure there's no overlap with the above list): 
-
-Other readers: Jon Beardsley, Ben Gadoua, Pedro Mendes de Araujo, Denis Nardin, Sune Precht Reeh, Andrew Senger (``stalkwise'' remarks), Sean Tilson, Kevin Wray
-
-% Sam Dhindsa, Tom Dunning
+Thanks, also, to my friends here, and thanks also to Thomas Dunning especially.
