--- a/main.bib
+++ b/main.bib
@@ -818,6 +818,22 @@ MRREVIEWER = {Burt Totaro},
 MRREVIEWER = {Andrew J. Baker},
 }
 
+@article {HopkinsOnRavenel,
+    AUTHOR = {Hopkins, Michael J.},
+     TITLE = {The mathematical work of {D}ouglas {C}. {R}avenel},
+   JOURNAL = {Homology Homotopy Appl.},
+  FJOURNAL = {Homology, Homotopy and Applications},
+    VOLUME = {10},
+      YEAR = {2008},
+    NUMBER = {3},
+     PAGES = {1--13},
+      ISSN = {1532-0073},
+   MRCLASS = {55-02 (55N22 55Q51 55T15)},
+  MRNUMBER = {2475614},
+MRREVIEWER = {Haynes R. Miller},
+       URL = {http://projecteuclid.org/euclid.hha/1201127511},
+}
+
 @article {HopkinsHunton,
     AUTHOR = {Hopkins, M. J. and Hunton, J. R.},
      TITLE = {On the structure of spaces representing a {L}andweber exact
