use booktabs for the tables

--- a/quillen.tex
+++ b/quillen.tex
@@ -503,15 +503,17 @@ There are natural isomorphisms $BU_E \cong \Div_0 \CP^\infty_E$ and $(BU \times 
 
 \begin{figure}
 \begin{center}
-\begin{tabular}{|c|c||c|c|}
-\hline
-Space & classifies & Scheme & classifies \\
-\hline \hline
+\begin{tabular}{@{}cccc@{}} \toprule
+\multicolumn{2}{c}{Spaces} &
+\multicolumn{2}{c}{Schemes}
+\\
+\cmidrule(r){1-2}
+\cmidrule(r){3-4}
+Object & Classifies & Object & Classifies \\ \midrule
 $BU(n)$ & vector bundles of rank $n$ & $\Div_n^+ \CP^\infty_E$ & effective divisors of rank $n$ \\
 $\coprod_n BU(n)$ & all vector bundles & $\Div^+ \CP^\infty_E$ & all effective divisors \\
 $BU \times \Z$ & stable virtual bundles & $\Div \CP^\infty_E$ & stable Weil divisors \\
-$BU \times \{0\}$ & stable virtual bundles of rank $0$ & $\Div_0 \CP^\infty_E$ & stable divisors of rank $0$ \\
-\hline
+$BU \times \{0\}$ & stable virtual bundles of rank $0$ & $\Div_0 \CP^\infty_E$ & stable divisors of rank $0$ \\ \bottomrule
 \end{tabular}
 \end{center}
 \caption{Different notions of vector bundles and their associated divisors}
