--- a/sigma.tex
+++ b/sigma.tex
@@ -996,20 +996,7 @@ For $N > 1$, this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-Let us expand this in the case of $N = 2$.  The four functions involved are labeled $\theta_q^{0,0}$, $\theta_q^{0,1/2}$, $\theta_q^{1/2,0}$, and $\theta_q^{1/2,1/2}$, and we record their zero loci in the following table:
-\begin{center}
-\begin{tabular}{|c||c|}
-\hline
-Function & Zero locus \\
-\hline \hline
-$\theta_q^{0,0}$ & $q^{\Z} \cdot q^{1/2} \cdot i$ \\
-$\theta_q^{0,1/2}$ & $q^{\Z} \cdot q^{1/2}$ \\
-$\theta_q^{1/2,0}$ & $q^{\Z} \cdot i$ \\
-$\theta_q^{1/2,1/2}$ & $q^{\Z}$. \\
-\hline
-\end{tabular}
-\end{center}
-The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
+Let us expand this in the case of $N = 2$.  The four functions involved are labeled $\theta_q^{0,0}$, $\theta_q^{0,1/2}$, $\theta_q^{1/2,0}$, and $\theta_q^{1/2,1/2}$, and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of $f_{(2)}$ in $\P^{2^2 - 1}(\C)$ is cut out by the equations
 \begin{align*}
 A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, &
 A^2 x_3^2 & = C^2 x_1^2 - B^2 x_2^2,
@@ -1029,6 +1016,20 @@ C & = \theta_q^{1/2, 0}(0) = \sum_n q^{(n + 1/2)^2},
 \end{align*}
 upon which there is the additional ``Jacobi'' relation \[A^4 = B^4 + C^4.\]
 \end{example}
+
+\begin{figure}
+\begin{center}
+\begin{tabular}{@{}cc@{}} \toprule
+Function & Zero locus \\
+\midrule
+$\theta_q^{0,0}$ & $q^{\Z} \cdot q^{1/2} \cdot i$ \\
+$\theta_q^{0,1/2}$ & $q^{\Z} \cdot q^{1/2}$ \\
+$\theta_q^{1/2,0}$ & $q^{\Z} \cdot i$ \\
+$\theta_q^{1/2,1/2}$ & $q^{\Z}$. \\ \bottomrule
+\end{tabular}
+\end{center}
+\caption{Standard $\theta$--functions and their offsets}\label{ThetaFunctionsTable}
+\end{figure}
 
 \begin{remark}
 This embedding of $E_\Lambda$ as an intersection of quadric surfaces in $\CP^3$ is quite different from the Weierstrass embedding.  Nonetheless, the embeddings are analytically related.  Namely, there is an equality \[\frac{d^2}{dz^2} \log \theta_q(u) = \wp_\Lambda(z).\]  Separately, Weierstrass considered a function $\sigma_\Lambda$, defined by \[\sigma_\Lambda(z) = z \prod_{\omega \in \Lambda \setminus 0} \left( 1 - \frac{z}{\omega} \right) \cdot \exp \left[ \frac{z}{\omega} + \frac{1}{2} \left( \frac{z}{\omega} \right)^2 \right],\] which also has the property that its second logarithmic derivative is $\wp$ and so is ``basically $\theta_q^{1/2,1/2}$''.  In fact, any elliptic function can be written in the form \[c \cdot \prod_{i=1}^n \frac{\sigma_\Lambda(z - a_i)}{\sigma_\Lambda(z - b_i)}.\]
