--- a/mo.tex
+++ b/mo.tex
@@ -275,7 +275,7 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, and they nest together in a complicated way: there is an inclusion of $\Gm[n]$ into $\Gm[nm]$.  There is also a second filtration along the lines of the one considered in \Cref{FormalGaExample}: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes form a sequential system\todo{... of infinitesimal thickenings}, but they are only occasionally group schemes.  Specifically, $\Gm^{(2^j)}$ is a group scheme, in which case $\Gm^{(2^j)} \cong \Gm[2^j]$.\footnote{Additionally, the \emph{only} values of $n$ for which $\Gm[n]$ is an infinitesimal thickening of $\Gm[1]$ are those of the form $n = 2^j$.}  We define $\G_m$ using this common subsystem: \[\G_m := \{\Gm^{(2^j)}\}_{j=0}^\infty.\]
 \end{example}
 
-Let us now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
+Let us now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is so useful that we will give it a notation all of its own:
 
 \begin{definition}\label{HF2SchemeForFiniteCplx}
 Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite--dimensional as an $\F_2$--vector space.  We will write \[X_{H\F_2} = \Spec H\F_2^* X\] for the corresponding finite affine scheme.
@@ -285,7 +285,7 @@ Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite
 Putting together the discussions from this time and last time, in the new notation we have calculated \[\RP^n_{H\F_2} \cong \mathbb A^{1, (n)}.\]
 \end{example}
 
-So far, this example just restates things we knew in a mildly different language.  Our driving goal for the next section is to incorporate as much information as we have about these cohomology rings $H\F_2^* (\RP^n)$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will discover why $X$ had to be a \emph{finite} complex and how to think about more general $X$.  For now, though, we will content ourselves with investigating the Hopf algebra structure on $H\F_2^* \RP^\infty$, the cohomology of an infinite complex.
+So far, this example just restates what we already knew in a mildly different language.  Our driving goal for the next section is to incorporate as much information as we have about these cohomology rings $H\F_2^* (\RP^n)$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will discover why $X$ had to be a \emph{finite} complex and how to think about more general $X$.  For now, though, we will content ourselves with investigating the Hopf algebra structure on $H\F_2^* \RP^\infty$, the cohomology of an infinite complex.
 
 \begin{example}\label{RPExampleFaulty}
 Recall that $\RP^\infty$ is an $H$--space in two equivalent ways:
@@ -450,7 +450,7 @@ In summary, the formula $\RP^\infty_{H\F_2} \cong \G_a$ is meant to point out th
 
 \section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
-In this section, we will focus on an important classical tool: the Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  But, even without a construction, it is instructive to see how such a thing comes about from a moral perspective.  \citeme{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to}
+In this section, we will focus on an important classical tool: the Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  But, even without a construction, it is instructive to see how this comes about from a moral perspective.  \citeme{I first saw this presentation from Matt Ando. He must have learned it from someone. I'd like to know who to attribute this to}
 
 \begin{remark}
 Throughout this Lecture, we will work with graded homology groups, rather than with periodified cohomology as was the case in \Cref{TheSteenrodAlgebraSection}.  This choice will remain mysterious for now, but we can at least reassure ourselves that it carries the same data as we were studying previously.  Referring to our discussion of the construction of the coaction map, we see that without taking Spanier--Whitehead duals we already have an analogous coaction map on homology: \[H\F_{2*} X \to H\F_{2*} X \otimes \mathcal A_*.\]  Additionally, building on the discussion in \Cref{AutGaHasStableCoopns}, the splitting of the Hopf algebra shows that we are free to work gradedly or work with the periodified version of mod--$2$ homology, while still retaining the rest of the framework.
@@ -561,7 +561,7 @@ One of the main uses of these operations is to define the cohomology of a sheaf.
 \begin{example}\label{HopfAlgebrasFromFiniteGroups}
 A common source of Hopf algebras is through group--rings: given a group $G$, we can define the Hopf $k$--algebra $k[G]$ consisting of formal $k$--linear combinations of elements of $G$.  This Hopf algebra is commutative exactly when $G$ is abelian, and $k[G]$--modules are naturally equivalent to $k$--linear $G$--representations.  Dually, the ring $k^G$ of $k$--valued functions on $G$ is always commutative, using pointwise multiplication of functions, and it is \emph{cocommutative} exactly when $G$ is abelian.  If $G$ is finite, then $k^G$ and $k[G]$ are $k$--linear dual Hopf algebras, and hence finite--dimensional $k^G$--comodules are naturally equivalent to finite--dimensional $k$--linear $G$--representations.\footnote{There is a variation on this equivalence that uses fewer dualities and which is instructive to expand.  The Hopf algebra $k^G = \prod_{g \in G} k$ is the ring of functions on the constant group scheme $G$, and its $k$--points $(\Spec k^G)(k)$ biject with points in $G$.  Namely, given $g \in G$ we can form a projection map $g\co k^G \to k$ and hence a composite $M \to M \otimes_k k^G \xrightarrow{\id \otimes g} M \otimes_k k \cong M$.  Collectively, this determines a map $G \times M \to M$ witnessing $M$ as a $G$--representation.  In the other direction, if $G$ is finite then we can construct a map $M \to M \otimes_k \prod_{g \in G} k$ sending $m \in M$ to $g \cdot m$ in the $g${\th} labeled component of the target.}
 
-A map of groups $f\co G \to H$ induces a map $k^f\co k^H \to k^G$ of Hopf algebras, and it is reasonable to expect that the induced push and pull maps of comodules mimic those of $G$-- and $H$--representations.  Namely, given an $H$--representation $M$, we can produce a corresponding $G$--representation by precomposition with $f$.  However, given a $G$--representation $N$, two things may have to be corrected to extract an $H$--representation:
+A map of groups $f\co G \to H$ induces a map $k^f\co k^H \to k^G$ of Hopf algebras, and it is reasonable to expect that the induced push and pull maps of comodules mimic those of $G$-- and $H$--representations.  Namely, given an $H$--representation $M$, we can produce a corresponding $G$--representation by precomposition with $f$.  However, given a $G$--representation $N$, two features may have to be corrected to extract an $H$--representation:
 \begin{enumerate}
 \item If $f$ is not surjective, we must decide what to do with the extra elements in $H$.
 \item If $f$ is not injective---say, $f(g_1) = f(g_2)$---then we must force the behavior of the extracted $H$--representation to agree on $f(g_1)$ and $f(g_2)$, even if $g_1$ and $g_2$ act differently on $N$.  In the extreme case of $f\co G \to 1$, we expect to recover the fixed points of $N$, since this pushforward computes $H^0_{\mathrm{gp}}(G; N)$.
