turn on backrefs

--- a/preamble.tex
+++ b/preamble.tex
@@ -2,7 +2,8 @@
 
 \usepackage[pdftex,
             pdfauthor={Eric Peterson},
-            pdftitle={Formal Geometry and Bordism Operations}]{hyperref}
+            pdftitle={Formal Geometry and Bordism Operations},
+            backref]{hyperref}
 
 \usepackage[protrusion=true,expansion=true]{microtype}
 % \usepackage{savetrees}
